# bewise_ai_2

./: .dockerignore  .env.Example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 51d7a50512cc_audio_db_creation.py  8f64c54bfd8f_users_db_creation.py
src/: config.py  database.py  main.py  models.py  utils.py
src/auth/: auth_check.py  models.py  router.py  schemas.py  service.py
src/record/: models.py  router.py  schemas.py  service.py  utils.py
